<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="${packageName}.${activityClass}" >



    <TextView
        android:id="@+id/txtElegiElArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/elegiElArea"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLengua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtElegiElArea"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/lengua" 
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btnMatematica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLengua"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/matematica"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnSobreLasAreas"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="22dp"
        android:text="@string/sobreLasAreas"
		android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnSobreLasAreas"
        android:layout_toRightOf="@+id/btnMatematica"
        android:text="@string/volver"
        android:textColor="#ffffff" />

</RelativeLayout>
    
    

