<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PaginaPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/txtIngresaTuNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/ingresaTuNombre"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnJuegoPorPrimeraVez"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/txtIngresaTuNombre"
        android:text="@string/juegoPorPrimeraVez"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edtNombre"
        android:layout_marginTop="24dp"
        android:text="@string/ingresar"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIngresaTuNombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#fff" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="Logo"
        android:src="@drawable/logo" />

</RelativeLayout>